--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "codespaces-react",
-  "type": "module",
   "version": "0.1.0",
   "main": "src/index.js",
   "dependencies": {
     "express": "^4.18.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsnd src/index.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
-
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.4"
+  }
 }
